@@ -68,6 +68,7 @@ New Commands:
 - Widgets:        Added "get_item_configuration" command
 - Widgets:        Added "add_pie_series" command
 - Plots:          Added "add_shade_series" command
+- Plots:          Added "add_image_series" command
 - Plots:          Added "add_bar_series" command
 - Plots:          Added "add_error_series" command
 - Plots:          Added "add_heat_series" command
